smaller icon, more-or-less correct alignment
in sommenrij

--- a/rekenen2.css
+++ b/rekenen2.css
@@ -202,8 +202,8 @@ a.homebutton:hover
 .title-backbutton {
   border-radius: 50px;
   cursor: pointer;
-  height: 4rem;
-  width: 4rem;
+  height: 3rem;
+  width: 3rem;
   display: inline-block;
 }
 
